--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Revalia&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     list-style: none;
     text-decoration: none;
+    font-family: Audiowide;
+}
+
+span {
+    font-family: Audiowide inherit;
 }
 
 .container {
